crates/mineral-tui/src/components/overlay/snapshots/mineral_tui__components__overlay__queue__tests__queue_empty_snapshot.snap
---
source: crates/mineral-tui/src/components/overlay/queue.rs
description: "队列浮层:空队列"
expression: t.backend()
---
"                                                            "
"                                                            "
"                                                            "
"          ╭ queue · floating  press q to close ──╮          "
"          │#   track                       len   │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          ╰ 0 / 0 ─── ↵ play  ·  Tab/q/esc close ╯          "
"                                                            "
"                                                            "
"                                                            "
