crates/mineral-tui/src/components/overlay/snapshots/mineral_tui__components__overlay__queue__tests__queue_mid_animation_snapshot.snap
---
source: crates/mineral-tui/src/components/overlay/queue.rs
description: "队列浮层:弹出动画半程(scale=500)空壳"
expression: t.backend()
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                    "
"                    ████████████████████                    "
"                    ████████████████████                    "
"                    ████████████████████                    "
"                    ████████████████████                    "
"                    ████████████████████                    "
"                    ████████████████████                    "
"                    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                    "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
