crates/mineral-tui/src/components/overlay/snapshots/mineral_tui__components__overlay__queue__tests__queue_narrow_song_snapshot.snap
---
source: crates/mineral-tui/src/components/overlay/queue.rs
description: "队列浮层:窄浮层退到 Song 档(只剩歌名,无 artist)"
expression: t.backend()
---
"                                                            "
"                                                            "
"                                                            "
"          ╭ queue ───────────────────────────────╮          "
"          │  #   title                     len   │          "
"          │▌ 0   LoveLetterTypewriter      3:45  │          "
"          │  ▶   Palisade                  4:31  │          "
"          │  2   Gjs                       4:46  │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          ╰ 1 / 3 ─── ↵ play  ·  Tab/q/esc close ╯          "
"                                                            "
"                                                            "
"                                                            "
