crates/mineral-tui/src/components/overlay/snapshots/mineral_tui__components__overlay__queue__tests__queue_smooth_both_axes_snapshot.snap
---
source: crates/mineral-tui/src/components/overlay/queue.rs
description: "队列浮层:弹出动画 scale=510 双轴 1/8 平滑"
expression: t.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▉████████████████████████▎                           "
"                           ▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
