crates/mineral-tui/src/components/overlay/snapshots/mineral_tui__components__overlay__queue__tests__queue_with_items_focused_snapshot.snap
---
source: crates/mineral-tui/src/components/overlay/queue.rs
description: "队列浮层:EndSerenading 前 3 曲,Palisade 当前在播(▶)+ 聚焦"
expression: t.backend()
---
"                                                            "
"                                                            "
"                                                            "
"          ╭ queue · floating  press q to close ──╮          "
"          │  #   track                     len   │          "
"          │▌ 0   LoveLetterTypewriter — Mi 3:45  │          "
"          │  ▶   Palisade — Mineral        4:31  │          "
"          │  2   Gjs — Mineral             4:46  │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          │                                      │          "
"          ╰ 1 / 3 ─── ↵ play  ·  Tab/q/esc close ╯          "
"                                                            "
"                                                            "
"                                                            "
